--- a/src/main/java/com/mycompany/visao/cliente/ListCliente.form
+++ b/src/main/java/com/mycompany/visao/cliente/ListCliente.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -85,18 +85,12 @@
         <Component class="javax.swing.JComboBox" name="jcbTipoFiltro">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="11">
+              <StringArray count="5">
                 <StringItem index="0" value="TODOS"/>
                 <StringItem index="1" value="ID"/>
-                <StringItem index="2" value="RUA"/>
-                <StringItem index="3" value="CEP"/>
-                <StringItem index="4" value="N&#xda;M. RESID&#xca;NCIA"/>
-                <StringItem index="5" value="NOME"/>
-                <StringItem index="6" value="SOBRENOME"/>
-                <StringItem index="7" value="GENERO"/>
-                <StringItem index="8" value="TELEFONE"/>
-                <StringItem index="9" value="EMAIL"/>
-                <StringItem index="10" value="ESTADO CIVIL"/>
+                <StringItem index="2" value="EMPRESA"/>
+                <StringItem index="3" value="CIDADE"/>
+                <StringItem index="4" value="CNPJ"/>
               </StringArray>
             </Property>
           </Properties>
@@ -132,7 +126,12 @@
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="10" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="250" resizable="true">
                       <Title/>
                       <Editor/>
                       <Renderer/>
@@ -152,12 +151,7 @@
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="400" resizable="true">
                       <Title/>
                       <Editor/>
                       <Renderer/>
