--- a/src/main/java/com/mycompany/visao/consultor/CadConsultor.form
+++ b/src/main/java/com/mycompany/visao/consultor/CadConsultor.form
@@ -153,7 +153,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnSalvar">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Salvar"/>
+            <Property name="text" type="java.lang.String" value="Incluir"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarActionPerformed"/>
